# Miranda

./: .gitignore  CMakeLists.txt  Makefile  README.md
doc/manual/: printman
new/: steer.c
src/: big.c  data.h  steer.c  version.c
